@@ -277,9 +277,11 @@ public:
 	VOID_END_RCPP
 	}
 
+#include <Rcpp/module/Module_Field.h>
+
 #include <Rcpp/module/Module_Add_Property.h>
-	
-	
+
+
 private:
 	METHOD_MAP methods ;
 	PROPERTY_MAP properties ;
@@ -292,7 +294,6 @@ private:
 
 template <typename Class> 
 class_<Class>* class_<Class>::singleton ;
-
 
 // function factories
 #include <Rcpp/module/Module_generated_function.h>
